--- a/MainPage.html
+++ b/MainPage.html
@@ -11,24 +11,40 @@
     <!-- header --> 
     <header class="header">
         <div class="logo">
-            <img src="web_portfolio_images/Logos/web_logo_black_160x160.svg"
+            <img src="web_portfolio_images/Logos/WHITE-favicon-32x32.svg"
                  alt="Ashton James Logo"
                  height="24" width="24">
         </div>
         <div class="quote">Turn your idyllic fantasy into digital reality</div>
         <div class="socials">
-                <img id="socials-logo" src="web_portfolio_images/SVGs/socials_icon0.svg"
-                     alt="Socials logo"
-                     height="100%" width="20">
+            <img id="socials-logo" src="web_portfolio_images/SVGs/socials_icon0.svg"
+                 alt="Socials logo">
+            <div class="socials-dropdown">
+                <a href="https://linkedin.com" target="_blank" class="social-icon">
+                    <img src="web_portfolio_images/SVGs/linked_in_logo.svg" alt="LinkedIn">
+                    LinkedIn
+                </a>
+                <a href="https://github.com" target="_blank" class="social-icon">
+                    <img src="web_portfolio_images/SVGs/git_hub_logo.svg" alt="GitHub">
+                    GitHub
+                </a>
+                <a href="https://x.com" target="_blank" class="social-icon">
+                    <img src="web_portfolio_images/SVGs/x_logo.svg" alt="X (Twitter)">
+                    X (Twitter)
+                </a>
+            </div>
         </div>
     </header>
 
     <!-- left navbar -->
     <nav class="vertical-nav">
         <ul>
-            <li><a href="#home" class="nav-link active"> Home </a></li>
-            <li><a href="#about" class="nav-link"> About </a></li>
-            <li><a href="#tech-stack" class="nav-link"> Tech Stack </a></li>
+            <li><a href="#home" class="nav-link active">
+                <img src="web_portfolio_images/PNGs/home.png" alt="Home Page"></a></li>
+            <li><a href="#about" class="nav-link">
+                <img src="web_portfolio_images/PNGs/person.png" alt="About Page"></a></li>
+            <li><a href="#tech-stack" class="nav-link"> 
+                <img src="web_portfolio_images/PNGs/stack.png" alt="Tech Stack"></a></li>
         </ul>
     </nav>
 
@@ -113,7 +129,7 @@
             
             <!-- picture section -->
             <div class="abstract-shape-container">
-                <img src="web_portfolio_images/JPGs/about_page_picture.jpg" 
+                <img src="web_portfolio_images/PNGs/home_page_picture.png" 
                      alt="Photo of Ashton">
             </div>
 
