--- a/MainPage.html
+++ b/MainPage.html
@@ -17,20 +17,20 @@
         </div>
         <div class="quote">Turn your idyllic fantasy into digital reality</div>
         <div class="socials">
-            <img id="socials-logo" src="web_portfolio_images/SVGs/socials_icon0.svg"
+            <img id="socials-logo" src="web_portfolio_images/SVGs/socials_icon.svg"
                  alt="Socials logo">
             <div class="socials-dropdown">
                 <a href="https://linkedin.com" target="_blank" class="social-icon">
-                    <img src="web_portfolio_images/SVGs/linked_in_logo.svg" alt="LinkedIn">
-                    LinkedIn
+                    <img src="web_portfolio_images/SVGs/likedin_icon_white.svg" alt="LinkedIn" id="LinkedIn">
+                    Linkedin
                 </a>
                 <a href="https://github.com" target="_blank" class="social-icon">
-                    <img src="web_portfolio_images/SVGs/git_hub_logo.svg" alt="GitHub">
-                    GitHub
+                    <img src="web_portfolio_images/SVGs/github_icon_white.svg" alt="GitHub" id="Github">
+                    Github
                 </a>
-                <a href="https://x.com" target="_blank" class="social-icon">
-                    <img src="web_portfolio_images/SVGs/x_logo.svg" alt="X (Twitter)">
-                    X (Twitter)
+                <a href="https://x.com" target="_blank" class="social-icon" id="X">
+                    <img src="web_portfolio_images/SVGs/x_icon_white.svg" alt="X (Twitter)">
+                    X
                 </a>
             </div>
         </div>
@@ -40,11 +40,11 @@
     <nav class="vertical-nav">
         <ul>
             <li><a href="#home" class="nav-link active">
-                <img src="web_portfolio_images/PNGs/home.png" alt="Home Page"></a></li>
+                <img src="web_portfolio_images/SVGs/home_icon_white.svg" alt="Home Page"></a></li>
             <li><a href="#about" class="nav-link">
-                <img src="web_portfolio_images/PNGs/person.png" alt="About Page"></a></li>
+                <img src="web_portfolio_images/SVGs/person_icon_white.svg" alt="About Page"></a></li>
             <li><a href="#tech-stack" class="nav-link"> 
-                <img src="web_portfolio_images/PNGs/stack.png" alt="Tech Stack"></a></li>
+                <img src="web_portfolio_images/SVGs/stack_icon_white.svg" alt="Tech Stack"></a></li>
         </ul>
     </nav>
 
@@ -66,7 +66,7 @@
 
             <!-- intro right -->
             <div class="abstract-shape-container">
-                <img src="web_portfolio_images/JPGs/home_page_picture.jpg" 
+                <img src="web_portfolio_images/PNGs/home_page_picture.png" 
                      alt="Photo of Ashton" class="profile-photo">
                 <!-- comments -->
                 <div class="short-comments">
@@ -129,7 +129,7 @@
             
             <!-- picture section -->
             <div class="abstract-shape-container">
-                <img src="web_portfolio_images/PNGs/home_page_picture.png" 
+                <img src="web_portfolio_images/PNGs/aboute_page_picture.png" 
                      alt="Photo of Ashton">
             </div>
 
