--- a/MainPage.html
+++ b/MainPage.html
@@ -36,6 +36,7 @@
           alt="Socials logo"
         />
         <div class="socials-dropdown">
+          <div class="top-highlight"></div>
           <a href="https://linkedin.com" target="_blank" class="social-icon">
             <img
               src="web_portfolio_images/SVGs/likedin_icon_white.svg"
