Remove animation bug on navbar

--- a/MainPage.html
+++ b/MainPage.html
@@ -68,7 +68,7 @@
     <nav class="vertical-nav">
       <ul>
         <li>
-          <a href="#home" class="nav-link active">
+          <a href="#home" class="nav-link">
             <img
               src="web_portfolio_images/SVGs/home_icon_white.svg"
               alt="Home Page"
