Continue home design, remove readme, and rename html to index

--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
               see what anime expo is like." - Friend 2
             </p>
           </div>
+          <div id="abstract-shape-highlight"></div>
         </div>
       </section>
 
