Remove bootstrap API, redo CSS

--- a/index.html
+++ b/index.html
@@ -6,12 +6,6 @@
     <title>Ashton James</title>
     <link rel="stylesheet" href="PortfolioStyles.css" />
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
-    <link
       rel="icon"
       type="image/ico"
       href="web_portfolio_images/Logo/portfolio_logo_favicon.ico"
@@ -95,7 +89,6 @@
     <main class="main-content">
       <!-- ===== HOME ===== -->
       <section id="home" class="section">
-  
         <div class="intro-left">
           <h4>I am,</h4>
           <h2>Ashton James</h2>
@@ -105,25 +98,31 @@
         </div>
 
         <!-- intro right -->
+        <div class="design">
         <div class="abstract-shape-container-right">
+          <div class="abstract-shape"></div>
+          <!-- profile -->
           <img
             src="web_portfolio_images/PNGs/home_page_picture.png"
             alt="Ashton"
             class="profile-photo"
           />
-          <!-- comments -->
-          <div class="short-comments">
-            <p>
-              "He doesn't talk much... but pick the right topic, and oh lord he
-              never stops talking." - Friend 1
-            </p>
-            <p>
-              "Ashton? Yeah, he cool, very nerdy. If he were dropped in the
-              middle of America, the first thing he'd look for is LA, just to
-              see what anime expo is like." - Friend 2
-            </p>
+          <div class="shape-group">
+            <!-- comments -->
+            <div class="short-comments">
+              <p>
+                "He doesn't talk much... but pick the right topic, and oh lord
+                he never stops talking." - Friend 1
+              </p>
+              <p>
+                "Ashton? Yeah, he cool, very nerdy. If he were dropped in the
+                middle of America, the first thing he'd look for is LA, just to
+                see what anime expo is like." - Friend 2
+              </p>
+            </div>
+            <!-- shape highlight -->
+            <div id="abstract-shape-highlight"></div>
           </div>
-          <div id="abstract-shape-highlight"></div>
         </div>
       </section>
 
@@ -435,10 +434,5 @@
 
     <!-- scripts -->
     <script src="PortfolioScript.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous"
-    ></script>
   </body>
 </html>
