add email copy functionality and enhance home section layout

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head> 
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ashton James</title>
@@ -17,27 +17,45 @@
     <!-- header -->
     <header class="header">
       <div class="logo">
-        <img src="web_portfolio_images/Logo/portfolio_logo_android_chrome_192x192.png" alt="Ashton James Logo" height="24" width="24" />
+        <img
+          src="web_portfolio_images/Logo/portfolio_logo_android_chrome_192x192.png"
+          alt="Ashton James Logo"
+          height="24"
+          width="24"
+        />
       </div>
       <!-- quote -->
       <div class="quote">Turn your idyllic fantasy into digital reality</div>
       <!-- socials -->
       <div class="socials">
-        <img id="socials-logo" src="web_portfolio_images/SVGs/socials_icon.svg" alt="Socials logo" />
+        <img
+          id="socials-logo"
+          src="web_portfolio_images/SVGs/socials_icon.svg"
+          alt="Socials logo"
+        />
         <div class="socials-dropdown">
           <div class="top-highlight"></div>
           <!-- drop down content -->
           <h6>Follow Me</h6>
           <a href="https://x.com" target="_blank" class="social-icon">
-            <img src="web_portfolio_images/SVGs/x_icon_white.svg" alt="X (Twitter)" />
+            <img
+              src="web_portfolio_images/SVGs/x_icon_white.svg"
+              alt="X (Twitter)"
+            />
             X
           </a>
           <a href="https://github.com" target="_blank" class="social-icon">
-            <img src="web_portfolio_images/SVGs/github_icon_white.svg" alt="GitHub" />
+            <img
+              src="web_portfolio_images/SVGs/github_icon_white.svg"
+              alt="GitHub"
+            />
             GitHub
           </a>
           <a href="https://linkedin.com" target="_blank" class="social-icon">
-            <img src="web_portfolio_images/SVGs/likedin_icon_white.svg" alt="LinkedIn" />
+            <img
+              src="web_portfolio_images/SVGs/likedin_icon_white.svg"
+              alt="LinkedIn"
+            />
             LinkedIn
           </a>
         </div>
@@ -48,9 +66,30 @@
     <nav class="vertical-nav" aria-label="Main Navigation">
       <ul>
         <!-- anchors including tooltips -->
-        <li><a href="#home-anchor" class="nav-link" data-tooltip="Home"><img src="web_portfolio_images/SVGs/home_icon_white.svg" alt="Home Page" /></a></li>
-        <li><a href="#about-anchor" class="nav-link" data-tooltip="About"><img src="web_portfolio_images/SVGs/person_icon_white.svg" alt="About Page" /></a></li>
-        <li><a href="#tech-stack-anchor" class="nav-link" data-tooltip="Tech Stack"><img src="web_portfolio_images/SVGs/stack_icon_white.svg" alt="Tech Stack" /></a></li>
+        <li>
+          <a href="#home-anchor" class="nav-link" data-tooltip="Home"
+            ><img
+              src="web_portfolio_images/SVGs/home_icon_white.svg"
+              alt="Home Page"
+          /></a>
+        </li>
+        <li>
+          <a href="#about-anchor" class="nav-link" data-tooltip="About"
+            ><img
+              src="web_portfolio_images/SVGs/person_icon_white.svg"
+              alt="About Page"
+          /></a>
+        </li>
+        <li>
+          <a
+            href="#tech-stack-anchor"
+            class="nav-link"
+            data-tooltip="Tech Stack"
+            ><img
+              src="web_portfolio_images/SVGs/stack_icon_white.svg"
+              alt="Tech Stack"
+          /></a>
+        </li>
       </ul>
     </nav>
 
@@ -60,27 +99,33 @@
       <div id="home-anchor" class="anchor"></div>
       <!-- ===== HOME ===== -->
       <section id="home" class="section">
+        <!-- home left side -->
         <div class="intro-left">
-          <h4>I am,</h4>
-          <h2>Ashton James</h2>
-          <h4>A UI/UX Designer & Front End Developer</h4>
-          <button class="connect-button">Connect with me</button>
-          <h6>Email: projectkfiles@gmail.com</h6>
+          <div class="intro-line"></div>
+          <div class="intro-text">
+            <div class="intro-headers">
+              <h4>I am,</h4>
+              <h2>Ashton James D. Caspe</h2>
+              <h4>A UI/UX Designer & Front End Developer</h4>
+            </div>
+            <div class="contact-info">
+              <button class="connect-button">Connect with me</button>
+              <p class="email">Email: projectkfiles@gmail.com</p>
+            </div>
+          </div>
         </div>
 
-        <!-- intro right -->
-        <div class="design">
-        <div class="abstract-shape-container-right">
-          <div class="abstract-shape"></div>
-          <!-- profile -->
-          <img
-            src="web_portfolio_images/PNGs/home_page_picture.png"
-            alt="Ashton"
-            class="profile-photo"
-          />
-          <div class="shape-group">
-            <!-- comments -->
-            <div class="short-comments">
+        <!-- home right side -->
+        <div class="home-right">
+          <div class="big-text">ASHTON</div>
+          <div class="abstract-shape-container">
+            <div class="abstract-shape"></div>
+            <img
+              src="web_portfolio_images/PNGs/home_page_picture.png"
+              alt="Ashton"
+              class="profile-photo"
+            />
+            <div class="comments-box">
               <p>
                 "He doesn't talk much... but pick the right topic, and oh lord
                 he never stops talking." - Friend 1
@@ -90,9 +135,18 @@
                 middle of America, the first thing he'd look for is LA, just to
                 see what anime expo is like." - Friend 2
               </p>
+              <p>
+                Ashton is not just a great friend but also an amazing study
+                buddy. His patience and curiosity make discussions about
+                programming incredibly engaging. Thanks to him, I’ve been able
+                to use the Feynman Technique effectively—breaking down complex
+                concepts into simpler explanations that deepen my own
+                understanding. Whether it’s debugging code or brainstorming new
+                ideas, Ashton’s insights and enthusiasm always make learning
+                more enjoyable! - Friend 3
+              </p>
             </div>
-            <!-- shape highlight -->
-            <div id="abstract-shape-highlight"></div>
+            <div class="shape-highlight"></div>
           </div>
         </div>
       </section>
