Enhance About section layout with CSS grid, update personal details, and improve content structure

--- a/index.html
+++ b/index.html
@@ -136,14 +136,14 @@
                 see what anime expo is like." - Friend 2
               </p>
               <p>
-                Ashton is not just a great friend but also an amazing study
+                "Ashton is not just a great friend but also an amazing study
                 buddy. His patience and curiosity make discussions about
                 programming incredibly engaging. Thanks to him, I’ve been able
                 to use the Feynman Technique effectively—breaking down complex
                 concepts into simpler explanations that deepen my own
                 understanding. Whether it’s debugging code or brainstorming new
                 ideas, Ashton’s insights and enthusiasm always make learning
-                more enjoyable! - Friend 3
+                more enjoyable!" - Friend 3
               </p>
             </div>
             <div class="shape-highlight"></div>
@@ -156,18 +156,18 @@
 
       <!-- ===== ABOUT ===== -->
       <section id="about" class="section">
-        <!-- header bio -->
-        <div class="about-bio">
+        <!-- top left -->
+        <div class="about-top-left">
           <h2>about.</h2>
-          <h2>Ashton James</h2>
+          <h2>Ashton James D. Caspe</h2>
           <h5>"absolute cinema!" - Ashton James</h5>
-          <!-- list of info -->
+          <!-- info list -->
           <dl class="bio-list">
-            <dt>Born</dt>
+            <dt>Born:</dt>
             <dd>August 26 2005</dd>
-            <dt>Course</dt>
+            <dt>Course:</dt>
             <dd>Information Technology (Soon to be Degree)</dd>
-            <dt>Email</dt>
+            <dt>Email:</dt>
             <dd>
               <a href="mailto:projectkfiles@gmail.com"
                 >projectkfiles@gmail.com</a
@@ -176,71 +176,79 @@
           </dl>
         </div>
 
-        <!-- column right -->
-        <div class="about-egos">
-          <!-- design ego -->
-          <article class="ego-card">
+        <!-- top right -->
+        <div class="about-top-right">
+          <div class="ego-section">
+            <!-- design ego list -->
             <h3>Design Ego</h3>
             <ul class="spark-list">
               <li>UI Design</li>
-              <li>Ux Design</li>
-              <li>After Effects</li>
+              <li>UX Design</li>
+              <li>System Design</li>
               <li>Coating your designs with a dreamlike glaze</li>
             </ul>
-          </article>
-
-          <!-- code ego -->
-          <article class="ego-card">
+          </div>
+          <div class="ego-section">
             <h3>Code Ego</h3>
+            <!-- code ego list -->
             <ul class="spark-list">
               <li>HTML/CSS</li>
               <li>JavaScript</li>
               <li>Java</li>
               <li>Questioning my life decisions</li>
             </ul>
-          </article>
-
+          </div>
           <!-- pie chart -->
           <div class="ego-pie">
             <div class="pacman-chart" aria-label="Design 70%, Code 30%"></div>
-            <!-- design is later -->
           </div>
         </div>
 
-        <!-- picture section -->
-        <div class="abstract-shape-container-left">
-          <img
-            src="web_portfolio_images/PNGs/aboute_page_picture.png"
-            alt="Ashton"
-          />
+        <!-- vertical separator line -->
+        <div class="about-vertical-line"></div>
+
+        <!-- bottom left -->
+        <div class="about-bottom-left">
+          <div class="abstract-shape-container-left">
+            <div class="abstract-shape-about"></div>
+            <img
+              src="web_portfolio_images/PNGs/aboute_page_picture.png"
+              alt="Ashton"
+              class="profile-photo-about"
+            />
+            <div class="shape-highlight-about"></div>
+          </div>
         </div>
 
-        <!-- Long description section -->
-        <article class="about-rant">
-          <h3>WAIT A MINUTE WHO ARE YOU?</h3>
-          <p>
-            My name is Ashton James, and I am now studying at St. Dominic
-            College of Asia as an information technology student. My enthusiasm
-            primarily lays in artistic design this translates well to UI and UX.
-            I also enjoy theory-crafting systems and projects.
-          </p>
-          <p>
-            Though coding is not my main passion, I enjoy it enough to pursue it
-            as a career. The process of gradually discovering how technology and
-            computers work is truly fascinating. Even though I'm a little
-            sluggish to apply what I've learnt. Despite this, I hope to improve
-            my understanding and expertise of computers, particularly in the
-            front end department.
-          </p>
-          <p>
-            When I'm not looking at the screen, writing programming or
-            designing, I participate in generating types of entertainment media
-            such as anime, movies documentaries. To relax my eyes, I read
-            traditional literature such as Homer's "The Iliad" and Alexandre
-            Dumas' "The Count of Monte Cristo". When I'm not doing that, I work
-            out to keep my body from deteriorating. And that's it!
-          </p>
-        </article>
+        <!-- bottom right -->
+        <div class="about-bottom-right">
+          <article class="about-rant">
+            <h3>WAIT A MINUTE WHO ARE YOU?</h3>
+            <p>
+              My name is Ashton James, and I am now studying at St. Dominic
+              College of Asia as an information technology student. My
+              enthusiasm primarily lays in artistic design this translates well
+              to UI and UX. I also enjoy theory-crafting systems and projects.
+            </p>
+            <p>
+              Though coding is not my main passion, I enjoy it enough to pursue
+              it as a career. The process of gradually discovering how
+              technology and computers work is truly fascinating. Even though
+              I'm a little sluggish to apply what I've learnt. Despite this, I
+              hope to improve my understanding and expertise of computers,
+              particularly in the front end department.
+            </p>
+            <p>
+              When I'm not looking at the screen, writing programming or
+              designing, I participate in generating types of entertainment
+              media such as anime, movies documentaries. To relax my eyes, I
+              read traditional literature such as Homer's "The Iliad" and
+              Alexandre Dumas' "The Count of Monte Cristo". When I'm not doing
+              that, I work out to keep my body from deteriorating. And that's
+              it!
+            </p>
+          </article>
+        </div>
       </section>
 
       <!-- tech stack anchor -->
