Refactor CSS and HTML for improved layout, responsiveness, and simplified structure

--- a/index.html
+++ b/index.html
@@ -161,18 +161,10 @@
           <h2>about.</h2>
           <h2>Ashton James D. Caspe</h2>
           <h5>"absolute cinema!" - Ashton James</h5>
-          <!-- info list -->
+          <!-- info list - simplified -->
           <dl class="bio-list">
-            <dt>Born:</dt>
-            <dd>August 26 2005</dd>
             <dt>Course:</dt>
             <dd>Information Technology (Soon to be Degree)</dd>
-            <dt>Email:</dt>
-            <dd>
-              <a href="mailto:projectkfiles@gmail.com"
-                >projectkfiles@gmail.com</a
-              >
-            </dd>
           </dl>
         </div>
 
@@ -259,6 +251,14 @@
         <!-- title -->
         <h2 class="skills-title">SKILLS</h2>
 
+        <!-- skill toggle - moved to top -->
+        <div class="skill-switcher">
+          <button class="skill-toggle active" data-type="technical">
+            Technical
+          </button>
+          <button class="skill-toggle" data-type="soft">Soft</button>
+        </div>
+
         <!-- left column - skill lists -->
         <div class="skill-columns">
           <!-- technical skills -->
@@ -282,14 +282,6 @@
               <li data-skill="dedication">Dedication</li>
             </ul>
           </article>
-        </div>
-
-        <!-- skill toggle -->
-        <div class="skill-switcher">
-          <button class="skill-toggle active" data-type="technical">
-            Technical
-          </button>
-          <button class="skill-toggle" data-type="soft">Soft</button>
         </div>
 
         <!-- tv screen section -->
