--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ashton James</title>
-    <!-- CSS file -->
-    <link rel="stylesheet" href="PortfolioStyles.css" />
+    <!-- CSS files -->
+    <link rel="stylesheet" href="css/global.css" />
+    <link rel="stylesheet" href="css/header-nav.css" />
+    <link rel="stylesheet" href="css/home.css" />
+    <link rel="stylesheet" href="css/about.css" />
+    <link rel="stylesheet" href="css/tech-stack.css" />
     <!-- favicon -->
     <link
       rel="icon"
