Refactor header navigation and home section styles for improved layout, responsiveness, and visual consistency

--- a/index.html
+++ b/index.html
@@ -131,23 +131,21 @@
             />
             <div class="comments-box">
               <p>
-                "He doesn't talk much... but pick the right topic, and oh lord
-                he never stops talking." - Friend 1
-              </p>
-              <p>
                 "Ashton? Yeah, he cool, very nerdy. If he were dropped in the
                 middle of America, the first thing he'd look for is LA, just to
-                see what anime expo is like." - Friend 2
+                see what anime expo is like."
+                <span>- Friend 1</span>
               </p>
               <p>
                 "Ashton is not just a great friend but also an amazing study
                 buddy. His patience and curiosity make discussions about
-                programming incredibly engaging. Thanks to him, I’ve been able
+                programming incredibly engaging. Thanks to him, I've been able
                 to use the Feynman Technique effectively—breaking down complex
                 concepts into simpler explanations that deepen my own
-                understanding. Whether it’s debugging code or brainstorming new
-                ideas, Ashton’s insights and enthusiasm always make learning
-                more enjoyable!" - Friend 3
+                understanding. Whether it's debugging code or brainstorming new
+                ideas, Ashton's insights and enthusiasm always make learning
+                more enjoyable!"
+                <span>- Friend 2</span>
               </p>
             </div>
             <div class="shape-highlight"></div>
